==> Greg-R/magloop_pico_code_2/AccelStepper/AccelStepper.cpp <==
#include "AccelStepper.h"
#include "pico/stdlib.h"

boolean AccelStepper::runSpeed()
{
    // Dont do anything unless we actually have a step interval
    if (!_stepInterval)
        return false;

    unsigned long time = time_us_32();
    if (time - _lastStepTime >= _stepInterval)
    {
        if (_direction == DIRECTION_CW)
        {
            // Clockwise
            _currentPos += 1;
        }
        else
        {
            // Anticlockwise
            _currentPos -= 1;
        }
        step(_currentPos);

        _lastStepTime = time; // Caution: does not account for costs in step()

        return true;
    }
    else
    {
        return false;
    }
}

void AccelStepper::setOutputPins(uint8_t mask)
{
    uint8_t numpins = 2;
    if (_interface == MotorInterfaceType::FULL4WIRE || _interface == MotorInterfaceType::HALF4WIRE)
        numpins = 4;
    else if (_interface == MotorInterfaceType::FULL3WIRE || _interface == MotorInterfaceType::HALF3WIRE)
        numpins = 3;
    uint8_t i;
    for (i = 0; i < numpins; i++)
        gpio_put(_pin[i], (mask & (1 << i)) ? (HIGH ^ _pinInverted[i]) : (LOW ^ _pinInverted[i]));
}

void AccelStepper::step1(long step)
{
    (void)(step); // Unused

    // _pin[0] is step, _pin[1] is direction
    setOutputPins(_direction ? 0b10 : 0b00); // Set direction first else get rogue pulses
    setOutputPins(_direction ? 0b11 : 0b01); // step HIGH
    // Caution 200ns setup time
    // Delay the minimum allowed pulse width
    busy_wait_us_32(_minPulseWidth);
    setOutputPins(_direction ? 0b10 : 0b00); // step LOW
}

void AccelStepper::disableOutputs()
{
    if (_interface == MotorInterfaceType::FUNCTION)
        return;

    setOutputPins(0); // Handles inversion automatically
    if (_enablePin != 0xff)
    {
        gpio_set_dir(_enablePin, OUTPUT);
        gpio_put(_enablePin, LOW ^ _enableInverted);
    }
}

void AccelStepper::enableOutputs()
{
    if (_interface == MotorInterfaceType::FUNCTION)
        return;

    gpio_set_dir(_pin[0], OUTPUT);
    gpio_set_dir(_pin[1], OUTPUT);
    if (_interface == MotorInterfaceType::FULL4WIRE || _interface == MotorInterfaceType::HALF4WIRE)
    {
        gpio_set_dir(_pin[2], OUTPUT);
        gpio_set_dir(_pin[3], OUTPUT);
    }
    else if (_interface == MotorInterfaceType::FULL3WIRE || _interface == MotorInterfaceType::HALF3WIRE)
    {
        gpio_set_dir(_pin[2], OUTPUT);
    }

    if (_enablePin != 0xff)
    {
        gpio_set_dir(_enablePin, OUTPUT);
        gpio_put(_enablePin, HIGH ^ _enableInverted);
    }
}
